Fix vote service